# maren

apps/terminal/: meson.build
apps/terminal/terminal/: main.cpp  meson.build
libs/renderer/: meson.build
libs/renderer/glad/: meson.build
libs/renderer/include/: meson.build
libs/renderer/include/renderer/: renderer.h
libs/renderer/renderer/: meson.build  renderer.c
